NightMode Changed and Updated

--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -6,9 +6,7 @@
         android:layout_height="match_parent"
         tools:context="deakin.gopher.guardian.view.general.Homepage4caretaker"
         tools:layout_editor_absoluteX="-22dp"
-        tools:layout_editor_absoluteY="-108dp"
-        android:background="@color/off_white">
-
+        tools:layout_editor_absoluteY="-108dp">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/settingsButton3"
@@ -26,7 +24,7 @@
         android:text="@string/settings"
         android:textColor="@color/white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/menu_settings"
         app:iconGravity="top"
@@ -51,7 +49,7 @@
         android:text="@string/patient_list"
         android:textColor="@color/off_white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/patient_list_icon"
         app:iconGravity="top"
@@ -77,7 +75,7 @@
         android:text="@string/task_list"
         android:textColor="@color/off_white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/patient_list_icon"
         app:iconGravity="top"
@@ -104,7 +102,7 @@
         android:text="@string/log_out"
         android:textColor="@color/white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/logout"
         app:iconGravity="top"
@@ -130,7 +128,7 @@
         android:text="@string/training"
         android:textColor="@color/white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/training"
         app:iconGravity="top"
@@ -157,7 +155,7 @@
         android:text="@string/monitoring"
         android:textColor="@color/white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/baseline_camera_indoor_24"
         app:iconGravity="top"
@@ -182,7 +180,7 @@
         android:text="@string/profile"
         android:textColor="@color/white"
         android:textSize="11sp"
-        app:backgroundTint="@color/deep_blue"
+        app:backgroundTint="?attr/mainpage"
         app:cornerRadius="16dp"
         app:icon="@drawable/profile_user"
         app:iconGravity="top"
@@ -196,7 +194,7 @@
             android:layout_width="0dp"
             android:layout_height="220dp"
             android:layout_marginTop="-40dp"
-            app:cardBackgroundColor="@color/deep_blue"
+            app:cardBackgroundColor="?attr/mainpage"
             app:cardCornerRadius="40dp"
             app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
