--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
 
-    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Light mode ButtonBar -->
+    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:background">@color/black_overlay</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
         <item name="windowNoTitle">true</item>
@@ -9,11 +10,13 @@
         <item name="textAppearanceButton">@color/white</item>
     </style>
 
+    <!-- Font Style for Poppins -->
     <style name="poppinsfontstyle" parent="@android:style/TextAppearance.Small">
         <item name="android:fontFamily">@font/poppins</item>
     </style>
 
-    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+    <!-- Calendar View Customization -->
+    <style name="CalenderViewCustom" parent="Theme.MaterialComponents.DayNight">
         <item name="colorAccent">@color/light_blue_A200</item>
         <item name="colorPrimary">@color/white</item>
     </style>
@@ -31,31 +34,51 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <!-- Main App Theme -->
+<!--    <style name="AppTheme" parent="Theme.TeamGuardians">-->
+<!--        &lt;!&ndash; Primary color &ndash;&gt;-->
+<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+<!--        &lt;!&ndash; Primary dark color &ndash;&gt;-->
+<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+<!--        &lt;!&ndash; Accent color &ndash;&gt;-->
+<!--        <item name="colorAccent">@color/colorAccent</item>-->
+<!--        &lt;!&ndash; Background color &ndash;&gt;-->
+<!--        <item name="android:windowBackground">@color/white</item>-->
+<!--    </style>-->
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/deep_blue</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    <style name="Theme.TeamGuardians.Light" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">#673AB7</item> <!-- TG_blue -->
+        <item name="colorPrimaryVariant">#E91E63</item>
+        <item name="colorOnPrimary">#8BC34A</item>
+        <item name="colorSecondary">#03DAC5</item>
+        <item name="backgroundColor">#EF0808</item>
+        <item name="colorOnBackground">#000000</item>
+        <item name="android:windowBackground">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:navigationBarColor">#FFFFFF</item>
+        <item name="android:statusBarColor">#005BBB</item>
     </style>
 
+    <!-- TabLayout Theme -->
     <style name="TabLayoutTheme" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">16sp</item>
         <item name="textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
-
     </style>
 
+    <!-- Selected TabLayout Theme -->
     <style name="TabLayoutSelectedTheme" parent="TextAppearance.Design.Tab">
         <item name="android:textColor">@color/TG_blue</item>
     </style>
 
-
+    <!-- Day/Night Theme -->
     <style name="Theme.TeamGuardians.DayNight" parent="Theme.MaterialComponents.DayNight">
-
+        <item name="android:windowBackground">@color/black_overlay</item> <!-- Dark Mode Background -->
     </style>
-    //dark mode
 
-    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen1" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Dark mode ButtonBar -->
+    <style name="Widget.Theme.TeamGuardians.ButtonBar.Fullscreen1" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:background">@color/dark_primary_color</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
         <item name="windowNoTitle">true</item>
@@ -64,10 +87,12 @@
         <item name="textAppearanceButton">@color/white</item>
     </style>
 
+    <!-- Font Style for Poppins (Dark Mode) -->
     <style name="poppinsfontstyle1" parent="@android:style/TextAppearance.Small">
         <item name="android:fontFamily">@font/poppins</item>
     </style>
 
+    <!-- Menu Text Style -->
     <style name="menu_text_style" parent="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
@@ -75,6 +100,7 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <!-- Custom Autofill Text Appearance -->
     <style name="CustomAutofillTextAppearance">
         <item name="android:textSize">14sp</item>
     </style>
