--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,19 @@
-<resources>
-
-    <!-- Base application theme for light mode. -->
-    <style name="Theme.TeamGuardians" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/TG_blue</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/white</item>
-
-        <item name="android:fontFamily">@font/poppins</item>
-        <item name="android:textColorPrimary">@color/black</item>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.TeamGuardians" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">#FF9800</item>
+        <item name="colorPrimaryVariant">#673AB7</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorSecondary">#03DAC5</item>
+        <item name="backgroundColor">#E00808</item>
+        <item name="colorOnBackground">#000000</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:navigationBarColor">#000000</item>
+        <item name="android:statusBarColor">#005BBB</item>
+        <item name="android:windowBackground">#FFFFFF</item>
+        <item name="settingsBarColor">@color/TG_blue</item>
+        <item name="settingheadColor">@color/TG_blue</item>
+        <item name="mainpage">@color/deep_blue</item>
+        <item name="hamburger">@color/colorPrimary</item>
     </style>
 
 
