--- a/app/src/main/res/drawable/colors.xml
+++ b/app/src/main/res/drawable/colors.xml
@@ -1,10 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#000000"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <color name="TG_blue">#3B9CD7</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="flexibility_bg">#E6E6FA</color>  <!-- Very light lavender -->
+    <color name="strength_bg">#FFFCF5E0</color>     <!-- Light yellow -->
+    <color name="breathing_bg">#FFE8F8E8</color>    <!-- Light mint green -->
+    <color name="balance_bg">#FFF0F8FF</color>      <!-- Very light blue -->
+    <color name="cardio_bg">#FFFFE8E8</color>       <!-- Light pink -->
+</resources>
