--- a/app/src/main/res/drawable/tab_selected.xml
+++ b/app/src/main/res/drawable/tab_selected.xml
@@ -1,10 +1,11 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:tint="#000000"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="@android:color/white"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/TG_blue" />
+    <corners android:radius="20dp" />
+
+    <padding
+        android:left="16dp"
+        android:top="6dp"
+        android:right="16dp"
+        android:bottom="6dp" />
+</shape>
