--- a/app/src/main/res/layout/activity_exercise_strength_module.xml
+++ b/app/src/main/res/layout/activity_exercise_strength_module.xml
@@ -9,7 +9,7 @@
         android:id="@+id/cornerShapeImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Decorative corner shape"
+        android:contentDescription="@string/content_description_gopher_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/shapes1" />
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
-                android:contentDescription="Gopher logo"
+                android:contentDescription="@string/content_description_gopher_logo"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <!-- Scrollable Content -->
     <ScrollView
         android:id="@+id/contentScrollView"
         android:layout_width="0dp"
@@ -88,7 +87,7 @@
                 android:layout_width="38dp"
                 android:layout_height="32dp"
                 android:layout_marginTop="8dp"
-                android:contentDescription="strength"
+                android:contentDescription="@string/strength_exercise1"
                 android:src="@drawable/strength"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -112,13 +111,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/strength" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/buttonTopGuideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.70" />
-
 
             <Button
                 android:id="@+id/saveForLaterButton"
@@ -133,9 +125,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/backButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.207"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/buttonTopGuideline"
-                app:layout_constraintVertical_bias="0.774" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/markCompleteButton"
@@ -150,9 +140,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/backButton"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.803"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/buttonTopGuideline"
-                app:layout_constraintVertical_bias="0.774" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <Button
                 android:id="@+id/backButton"
