--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -42,6 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="54dp"
                     android:contentDescription="TODO"
+                    android:onClick="onProfileClick"
                     app:layout_constraintBottom_toTopOf="@+id/medicalDiagnosticsTitleTextView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.498"
